<?xml version="1.0" encoding="utf-8"?>
<bunny.project.aromacafecashier.phone.view.SalesItemView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="30dp"
        android:text="@string/sale_item_default_id" />

    <TextView
        android:id="@+id/order_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:minWidth="50dp"
        android:text="@string/sale_item_default_order_time" />

    <TextView
        android:id="@+id/pay_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:minWidth="50dp"
        android:text="@string/sale_item_default_pay_time" />

    <!--<ImageView
        android:id="@+id/pay_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:src="@drawable/pay_status_payed_10dp" />-->

    <!--    <ImageView
            android:id="@+id/order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:src="@drawable/order_status_normal_10dp" />-->
</bunny.project.aromacafecashier.phone.view.SalesItemView>